--- a/src/assets/defaultStyles.scss
+++ b/src/assets/defaultStyles.scss
@@ -16,9 +16,12 @@ $link-hover-color: #45737c;
   --second-family: 'Verdana', sans-serif;
   --third-family: 'Arial', sans-serif;
 }
-* {
+*:not(label) {
   box-sizing: border-box;
+  transition: 1s;
+  animation-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
+
 h3 {
   margin: 0;
 }
@@ -42,7 +45,7 @@ button {
 input[type='text'],
 .phoneNumber {
   font-size: 14px;
-  color: $disable-color;
+  color: $text-color;
   border: 1px solid $default-border-color;
   border-radius: 4px;
   padding: 13px 15px;
@@ -81,6 +84,7 @@ select {
     border-color: $error-color;
   }
 }
+
 option {
   color: black;
   padding: 9px 10px;
